# kmac

./: Cargo.toml  README.md
benches/: mod.rs
src/: encoding.rs  kmac.rs  lib.rs  traits.rs
tests/: nist.rs
